# Cyber-Clock

./: .gitignore  CMakeLists.txt  ESP32-S3-PUBLISH MQTT  README.md
.cache/clangd/index/: main.c.44EBF188A82B56B8.idx
arduino_ide/sketch_mar8a/: sketch_mar8a.ino
docs/: bme280_commented.c
epd_test (2)/main/: main.c
main/: CMakeLists.txt  main.c
testUI/: CMakeLists.txt  partitions.csv
testUI/main/: CMakeLists.txt  bme280_mqtt.c  bme280_mqtt.h  bmp_data.h  bmp_to_c.py  epd_ui.c  epd_ui.h  main.c
test_epaper/: CMakeLists.txt
test_epaper/main/: main.c
weather_test (1)/weather_test/: CMakeLists.txt
weather_test (1)/weather_test/main/: CMakeLists.txt  main.c
